syntax = "proto3";

package app.v1;

import "app/chat.proto";

// Chat service with streaming support
service ChatService {
  // Join a chat room
  rpc JoinChat(JoinChatRequest) returns (JoinChatResponse) {}
  
  // Send a message to a chat room
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
  
  // Stream chat events (server streaming)
  rpc StreamChat(StreamChatRequest) returns (stream ChatEvent) {}
  
  // Bidirectional streaming chat
  rpc BiStreamChat(stream SendMessageRequest) returns (stream ChatEvent) {}
}